# retrochat-evalutator

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  dataset.json  example2.json  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_CHECKLIST.md  PLAN.md  PLAN_EVALUATION.md  PLAN_TRAINING.md  PROMPT_TEMPLATES.md
prompts/: judge_template.txt  rubric_extractor.txt  rubric_extractor_excellence.txt  rubric_extractor_token_efficiency.txt  rubric_extractor_user_turn_efficiency.txt  rubric_summarizer.txt
raw-data/: example1.jsonl  example2.jsonl
src/retrochat_evaluator/: __init__.py  cli.py  config.py
src/retrochat_evaluator/evaluation/: __init__.py  aggregator.py  evaluator.py  judge.py  scorer.py
src/retrochat_evaluator/llm/: __init__.py  gemini.py
src/retrochat_evaluator/models/: __init__.py  chat_session.py  evaluation.py  rubric.py  validation.py
src/retrochat_evaluator/training/: __init__.py  extractor.py  llm_summarizer.py  loader.py  semantic_summarizer.py  summarizer.py  trainer.py  visualizer.py
src/retrochat_evaluator/utils/: __init__.py  jsonl.py  prompts.py
src/retrochat_evaluator/validation/: __init__.py  validator.py
src/scripts/: __init__.py  generate_manifest.py  run_summarizer.py
tests/: __init__.py  conftest.py  test_cli.py  test_evaluation.py  test_models.py  test_training.py  test_utils.py  test_validation.py
tests/fixtures/: mock_manifest.json  mock_session.jsonl  mock_session_2.jsonl
